<resources>
    <string name="app_name">Projet Ajournée</string>
    <string name="start">Start</string>
    <string name="score">Score</string>
    <string name="title_label">Name</string>
    <string name="ok_button">Save</string>
    <string name="edit_title">Add you Score</string>
    <string name="difficulty_title">Chose you difficulty</string>
    <string name="dfficulty1">Licence 1</string>
    <string name="dfficulty2">Licence 2</string>
    <string name="dfficulty3">Licence 3</string>
    <string name="dfficulty4">Master1</string>
    <string name="dfficulty5">Master 2</string>
    <string name="menu_delete">Delete</string>
    <string name="table_name">Scoreboard</string>

</resources>
